[workspace]
members = ["common", "client", "server"]
resolver = "3"

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

# NOTE: Without -O3, slow decrypts create buffer bloat,
# lag spiking up to 500~2000 ms on chunk loading

[profile.dev]
opt-level = 1

[profile.dev.package]
snow.opt-level = 3
chacha20poly1305.opt-level = 3
chacha20.opt-level = 3
poly1305.opt-level = 3
curve25519-dalek.opt-level = 3
blake2.opt-level = 3
aead.opt-level = 3
cipher.opt-level = 3
digest.opt-level = 3
subtle.opt-level = 3

[workspace.dependencies]
tokio = { version = "1.48", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.11"

rmp-serde = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
uuid = "1.19"
argh = "0.1"
