[package]
name = "tatu-client"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
shadow-rs = { version = "1.5", default-features = false }
tatu-lib = { path = "../lib" }

tokio.workspace = true
futures.workspace = true
bytes.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
argh.workspace = true
dirs = "5.0"
rpassword = "7.4"

[build-dependencies]
shadow-rs = "1.5"
