[package]
name = "tatu-common"
version = "0.2.0"
edition = "2024"

[dependencies]
ed25519 = { package = "ed25519-dalek", version = "2", features = ["serde"] }
x25519 = { package = "x25519-dalek", version = "2", features = ["static_secrets"] }

blake2 = "0.10"
snow = { version = "0.10", default-features = false, features = [ "use-curve25519", "use-chacha20poly1305", "use-blake2", "use-getrandom" ] }
rug = { version = "1.28", default-features = false, features = ["integer", "std", "serde"] }
zeroize = "1.8"
rand = "0.8"

base58 = "0.2"
proquint = "0.1"
reed-solomon = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true

azalea-protocol = { git = "https://github.com/azalea-rs/azalea/", version = "0.15", default-features = false, features = ["connecting"] }
azalea-chat = { git = "https://github.com/azalea-rs/azalea/", version = "0.15", default-features = false }

uuid.workspace = true
once_cell = "1.21"
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
