[package]
name = "tatu-server"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
shadow-rs = { version = "1.5", default-features = false }
tatu-common = { path = "../common" }

tokio.workspace = true
futures.workspace = true
azalea.workspace = true
bytes.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rmp-serde.workspace = true
argh.workspace = true

[build-dependencies]
shadow-rs = "1.5"
